force-app/main/default/objects/Skills_Catalogue__c/Skills_Catalogue__c.object-meta.xml
<CustomObject>
    <label>Skill Catalogue</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skills Catalogue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>