force-app/main/default/objects/Skills_Catalogue__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>inspire1__Resource_Attribute__c</referenceTo>
    <relationshipLabel>Skills Catalogue</relationshipLabel>
    <relationshipName>Skills_Catalogue</relationshipName>
    <type>Lookup</type>
</CustomField>