force-app/main/default/objects/Skills_Catalogue__c/fields/Sno__c.field-meta.xml
<CustomField>
    <fullName>Sno__c</fullName>
    <label>S.NO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>